@@ -1,4 +1,4 @@
-.\" $Id: tiffdither.1,v 1.4 2006-04-20 12:17:19 dron Exp $
+.\" $Id: tiffdither.1,v 1.5 2013-03-06 03:35:09 tgl Exp $
 .\"
 .\" Copyright (c) 1990-1997 Sam Leffler
 .\" Copyright (c) 1991-1997 Silicon Graphics, Inc.
@@ -112,6 +112,9 @@ will force data to be written with the
 .I Fill\%Order
 tag set to
 .SM MSB2LSB .
+.TP
+.B \-r
+Make each strip have no more than the given number of rows.
 .TP
 .B \-t
 Set the threshold value for dithering.
